CSS file to include pie chart for skills

--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                 <div class="item col-12 col-md-4">
                     <div class="item-inner">
                         <div class="chart-easy-pie text-center">
-                            <div class="chart-theme-1-chart" data-percent="80">
+                            <div class="chart-theme-1 chart" data-percent="80">
                                 <span>80</span>
                                 %
                                 <canvas height="110" width="110"></canvas>
