GCP skill added

--- a/index.html
+++ b/index.html
@@ -504,6 +504,19 @@
                         <div class="level">4 years</div>
                         <div class="desc"> </div>
                     </div>
+
+                    <div class="item-inner">
+                        <div class="chart-easy-pie text-center">
+                            <div class="chart-theme-1 chart" data-percent="80">
+                                <span>80</span>
+                                %
+                                <canvas height="110" width="110"></canvas>
+                            </div>
+                        </div>
+                        <h4 class="skill-name">GCP</h4>
+                        <div class="level">Cloud Architect, 3 years</div>
+                        <div class="desc"> </div>
+                    </div>
                 </div>
             </div>
 
