Updated Linux skill

--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                                 <canvas height="110" width="110"></canvas>
                             </div>
                         </div>
-                        <h4 class="skill-name">Lnux</h4>
+                        <h4 class="skill-name">Linux</h4>
                         <div class="level">3 years</div>
                         <div class="desc"> </div>
                     </div>
