--- a/index.html
+++ b/index.html
@@ -526,6 +526,19 @@
                                 <canvas height="110" width="110"></canvas>
                             </div>
                         </div>
+                        <h4 class="skill-name">Azure</h4>
+                        <div class="level">DevOps, 1 year</div>
+                        <div class="desc"> </div>
+                    </div>
+
+                    <div class="item-inner">
+                        <div class="chart-easy-pie text-center">
+                            <div class="chart-theme-1 chart" data-percent="80">
+                                <span>70</span>
+                                %
+                                <canvas height="110" width="110"></canvas>
+                            </div>
+                        </div>
                         <h4 class="skill-name">Linux</h4>
                         <div class="level">3 years</div>
                         <div class="desc"> </div>
