Added AWS skillset to the portfolio

--- a/index.html
+++ b/index.html
@@ -543,6 +543,19 @@
                         <div class="level">3 years</div>
                         <div class="desc"> </div>
                     </div>
+
+                    <div class="item-inner">
+                        <div class="chart-easy-pie text-center">
+                            <div class="chart-theme-1 chart" data-percent="80">
+                                <span>60</span>
+                                %
+                                <canvas height="110" width="110"></canvas>
+                            </div>
+                        </div>
+                        <h4 class="skill-name">AWS</h4>
+                        <div class="level">Cloud Practioner, 1 year</div>
+                        <div class="desc"> </div>
+                    </div>
                 </div>
             </div>
 
