--- a/index.html
+++ b/index.html
@@ -561,6 +561,20 @@
 
         </div>
 
+        <div class="other-skills">
+            <h3 class="subtitle">DevOps</h3>
+            <div class="misc-skills">
+                <span class="skill-tag">Kubernetes</span>
+                <span class="skill-tag">Docker</span>
+                <span class="skill-tag">AzureDevOps</span>
+                <span class="skill-tag">AWS</span>
+                <span class="skill-tag">Schema Registry</span>
+            </div>
+            <!-- DevOps Skillset -->
+            <br>
+            
+        </div>
+
     </section>
 
     <!--------ends---->
