Backend skillset added to the portfolio

--- a/index.html
+++ b/index.html
@@ -566,13 +566,20 @@
             <div class="misc-skills">
                 <span class="skill-tag">Kubernetes</span>
                 <span class="skill-tag">Docker</span>
-                <span class="skill-tag">AzureDevOps</span>
+                <span class="skill-tag">Azure DevOps</span>
                 <span class="skill-tag">AWS</span>
                 <span class="skill-tag">Schema Registry</span>
             </div>
             <!-- DevOps Skillset -->
             <br>
-            
+            <h3 class="subtitle">Backend</h3>
+            <div class="misc-skills">
+                <span class="skill-tag">Node</span>
+                <span class="skill-tag">Django</span>
+                <span class="skill-tag">Flask</span>
+            </div>
+            <!-- Backend Skillset -->
+
         </div>
 
     </section>
