Updates to Education and certification

--- a/index.html
+++ b/index.html
@@ -580,9 +580,22 @@
             </div>
             <!-- Backend Skillset -->
 
+
         </div>
 
     </section>
+
+    <!-- Education section -->
+    <section id="education-section" class="education-section section">
+        <h2 class="section-title">Education and Certification</h2>
+        
+        <div class="row">
+
+        </div>
+
+    </section>
+    <!-- //section -->
+    <!-- End of educational section -->
 
     <!--------ends---->
 	<div class="ends">
