Updating CSS file

--- a/index.html
+++ b/index.html
@@ -590,6 +590,11 @@
         <h2 class="section-title">Education and Certification</h2>
         
         <div class="row">
+            <!-- Item -->
+            <div class="item col-12 col-md-6">
+                
+            </div>
+            <!-- //Item -->
 
         </div>
 
