Added Unilag education to the portfolio

--- a/index.html
+++ b/index.html
@@ -592,7 +592,15 @@
         <div class="row">
             <!-- Item -->
             <div class="item col-12 col-md-6">
-                
+
+                <div class="item-inner">
+                    <div class="title">BSc. Computer Engineering</div>
+                    <div class="sub-title">University of Lagos, Nigeria</div>
+                    <div class="time">2015 - 2020</div>
+                    <div class="desc">
+                        
+                    </div>
+                </div>
             </div>
             <!-- //Item -->
 
