Updated the education

--- a/index.html
+++ b/index.html
@@ -598,7 +598,11 @@
                     <div class="sub-title">University of Lagos, Nigeria</div>
                     <div class="time">2015 - 2020</div>
                     <div class="desc">
-                        
+                        Major in Computer Engineering with a minor in Electrical and Electronics Engineering.
+                        <br>
+                        Member of the Andela Learning Community, Data Science Nigeria, Microsoft Tech Community(MSPs) & Google Developers Group(GDG).
+                        <br>
+                        Other experiences in school includes extracurricular activities such as Sports(Tennis), programming experiences, bootcamps and volunteering.
                     </div>
                 </div>
             </div>
