Added 'Certifications' to portfolio

--- a/index.html
+++ b/index.html
@@ -608,6 +608,40 @@
             </div>
             <!-- //Item -->
 
+            <!-- Item -->
+            <div class="item col-12 col-md-6">
+
+                <div class="item-inner">
+                    <div class="title">Certifications</div>
+                    <div class="sub-title">google, Microsoft, aws, andela, udacity</div>
+                    <br>
+                    <!--  -->
+                    <div class="desc">
+                        <b>Google IT Support Professional Certification - Google</b>
+                        <a target="_blank" href="https://www.coursera.org/account/accomplishments/verify/ZDQPH23YBW2P"> Certificate Link </a>
+                        <br>
+                        <b>Google Cloud Professional - Google</b>
+                        <a target="_blank" href="https://adscerts.com/scholar/FFBFD9FE874B30A"> Certificate Link </a>
+                        <br>
+                        <b>Microsoft Certified Azure Fundamental - Microsoft</b>
+                        <a target="_blank" href="https://www.credly.com/badges/68f4b340-bcab-4daa-afe4-0da4a11d249c"> Certificate Link </a>
+                        <br>
+                        <b>Microsoft Certified AI Fundamental - Microsoft</b>
+                        <a target="_blank" href="https://www.credly.com/badges/3f231250-1966-40a3-bfc3-adfdc4981f89/public_url"> Certificate Link </a>
+                        <br>
+                        <b>AWS Cloud Practitioner - AWS</b>
+                        <a target="_blank" href="https://www.credly.com/badges/19da78a4-4d2f-46d3-a08a-b8c1ee0fc8dd/public_url"> Certificate Link </a>
+                        <br>
+                        <b>Build4SDG - Facebook | Andela</b>
+                        <a target="_blank" href="https://drive.google.com/file/d/1qmuhEYLeRPkCV3-P1wD_ztPC163ov74v/view"> Certificate Link </a>
+                        <br>
+                        <b>Edge AI for IoT Developers Nanodegree - Intel | Udacity</b>
+                        <a target="_blank" href="https://graduation.udacity.com/confirm/PWMKHMYP"> Certificate Link </a>
+                    </div>
+                </div>
+            </div>
+            <!-- //Item -->
+
         </div>
 
     </section>
