Added contact form section

--- a/index.html
+++ b/index.html
@@ -648,6 +648,23 @@
     <!-- //section -->
     <!-- End of educational section -->
 
+    <!--------contact---->
+	<section class="contact" id="contact">
+		<div class="container">
+			<div class="center">
+				<h3>Let's talk about everything</h3>
+				<p>Don't like forms? Send me an email.</p>
+			</div>
+
+			<div class="action">
+				<form>
+					<input type="email" name="email" placeholder="Enter Your email" required>
+					<input type="submit" name="submit" value="Submit">
+				</form>
+			</div>
+		</div>
+	</section>
+
     <!--------ends---->
 	<div class="ends">
 		<p>Tomiwa Adedokun © 2022</p>
