--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
     </section>
 
     <!-- Education section -->
-    <section id="education-section" class="education-section section">
+    <section id="education-section" class="education">
         <h2 class="section-title">Education and Certification</h2>
         
         <div class="row">
