Updated the class and id value for 'skills' section

--- a/index.html
+++ b/index.html
@@ -52,11 +52,6 @@
 
     </section>
 
-    <!-- Other sections -->
-    <section class="other-sections">
-
-    </section>
-
 
     <!-- About -->
     <section class="about" id="about">
@@ -586,7 +581,7 @@
     </section>
 
     <!-- Education section -->
-    <section id="education-section" class="education">
+    <section class="education" id="education">
         <h2 class="section-title">Education and Certification</h2>
         
         <div class="row">
