--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
 
     </section>
 
-    <section id="skills-section" class="skills-section selection text-center">
+    <section id="skills" class="skills">
 
         <h2 class="section-title">Professional Skills</h2>
         <div class="top-skills">
