Email action on contact section

--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
 
 			<div class="action">
 				<form>
-					<input type="email" name="email" placeholder="Enter Your email" required>
+					<input type="email" name="email" placeholder="Enter Your email" required aria-invalid="true" aria-required="true">
 					<input type="submit" name="submit" value="Submit">
 				</form>
 			</div>
