Experience update to portfolio

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <br>
                         </p>
                         <li>
-                            ● Troubleshooting web apps using App lens
+                            ● Troubleshooting web apps using Troubleshooting tools 
                         </li>
                         <br>
                         <li>
