--- a/index.html
+++ b/index.html
@@ -612,6 +612,9 @@
                     <br>
                     <!--  -->
                     <div class="desc">
+                        <b>Google Africa Developers Scholarship Mentor (Google Cloud)- Google</b>
+                        <a target="_blank" href="https://help.pluralsight.com/help/google-africa-developer-scholarship-2022"> Program info </a>
+                        <br>
                         <b>Google IT Support Professional Certification - Google</b>
                         <a target="_blank" href="https://www.coursera.org/account/accomplishments/verify/ZDQPH23YBW2P"> Certificate Link </a>
                         <br>
