--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
                     <br>
                     <!--  -->
                     <div class="desc">
-                        <b>Google Africa Developers Scholarship Mentor (Google Cloud)- Google</b>
+                        <b>Google Africa Developers Scholarship Mentor (Google Cloud)- Google & Andela</b>
                         <a target="_blank" href="https://help.pluralsight.com/help/google-africa-developer-scholarship-2022"> Program info </a>
                         <br>
                         <b>Google IT Support Professional Certification - Google</b>
