--- a/index.html
+++ b/index.html
@@ -613,6 +613,9 @@
                     <!--  -->
                     <div class="desc">
                         <b>Google Africa Developers Scholarship Mentor (Google Cloud)- Google & Andela</b>
+                        <ul>
+                            <li> Guiding learning through the learning phases of the scholarship program.</li> 
+                        </ul>
                         <a target="_blank" href="https://help.pluralsight.com/help/google-africa-developer-scholarship-2022"> Program info </a>
                         <br>
                         <b>Google IT Support Professional Certification - Google</b>
