Update to GADS mentorship

--- a/index.html
+++ b/index.html
@@ -614,7 +614,8 @@
                     <div class="desc">
                         <b>Google Africa Developers Scholarship Mentor (Google Cloud)- Google & Andela</b>
                         <ul>
-                            <li> Guiding learning through the learning phases of the scholarship program.</li> 
+                            <li> Guiding learning through the learning phases of the scholarship program.</li>
+                            <li> Engaging learners in a peer learning group so as to provide guidance on their learning path to become Cloud Engineers. </li> 
                         </ul>
                         <a target="_blank" href="https://help.pluralsight.com/help/google-africa-developer-scholarship-2022"> Program info </a>
                         <br>
