--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
 	<section class="contact" id="contact">
 		<div class="container">
 			<div class="center">
-				<h3>Let's talk about everything</h3>
+				<h3>Let's talk about everything!</h3>
 				<p>Don't like forms? Send me an email.</p>
 			</div>
 
