--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
 
                 <div class="item-inner">
                     <div class="title">Certifications</div>
-                    <div class="sub-title">google, Microsoft, aws, andela, udacity</div>
+                    <div class="sub-title">Google, Microsoft, Aws, Andela, Udacity</div>
                     <br>
                     <!--  -->
                     <div class="desc">
