Tek-experts responsibility update

--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
                         <p>
                             <b>Technologies:</b>
                             <br>
-                            Azure · Azure DevOps · Azure Kubernetes Service (AKS) · Azure Kusto · Web Applications · Azure API Management · Azure Functions · Azure Virtual Machines · Azure Logic Apps
+                            Azure · Azure DevOps · Azure Kubernetes Service (AKS) · Azure Resource Manager · Azure Kusto · Web Applications · Azure API Management · Azure Functions · Azure Virtual Machines · Azure Logic Apps
                         </p>
                         <p>
                             <b>Responsibilities:</b>
                             <br>
                         </p>
                         <li>
-                            ● Troubleshooting web apps using Troubleshooting tools 
+                            ● Troubleshooting web apps using troubleshooting tools 
                         </li>
                         <br>
                         <li>
