--- a/index.html
+++ b/index.html
@@ -616,6 +616,7 @@
                         <ul>
                             <li> Guiding learning through the learning phases of the scholarship program.</li>
                             <li> Engaging learners in a peer learning group so as to provide guidance on their learning path to become Cloud Engineers. </li> 
+                            <li> Hosting and anchoring virtual training sessions for learners to aid in their learning process</li>
                         </ul>
                         <a target="_blank" href="https://help.pluralsight.com/help/google-africa-developer-scholarship-2022"> Program info </a>
                         <br>
