update to tek-experts experience

--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@
                         </li>
                         <br>
                         <li>
+                            ● Microsoft Azure cloud support for App Services performance & configuration which includes Web apps, Azure Functions and others
+                        </li>
+                        <br>
+                        <li>
                             ● Optimizing cloud applications through the application of the efficient cloud tools that are deployed using different programming languages.                        
                         </li>
                         <br>
