Updated Tek Experts experience

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         </li>
                         <br>
                         <li>
-                            ● Ensuring effective communication which brings about great customer satisfaction by being accountable, resourceful and showing empathy.                        
+                            ● Ensuring effective communication which brings about great customer satisfaction and getting a resolution with an average of 98% customer satisfaction rating.                        
                         </li>
                         <br>
                         <li>
