Changes to Roles

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
                 <div class="job-meta">
 
-                    <div class="title">Software Engineer Intern</div>
+                    <div class="title">Software Engineering Intern</div>
                     <div class="time">June. 2020 - August. 2020</div>
                 </div>
 
@@ -268,7 +268,7 @@
                     <h3 class="place">
                         <i class='bx bx-link-alt'></i>
                         <a target="_blank" href="https://buildforsdg.andela.com/">
-                            <u>Facebook-Andela SDG</u>
+                            <u>Andela</u>
                             <small>Backend Developer</small>
                         </a>
                     </h3>
