Updated Google Cloud Engineering expertise

--- a/index.html
+++ b/index.html
@@ -617,6 +617,7 @@
                     <div class="desc">
                         <b>Google Africa Developers Scholarship Mentor (Google Cloud)- Google & Andela</b>
                         <ul>
+                            <li> Cloud engineering operations on Google Cloud Platform</li>
                             <li> Guiding learning through the learning phases of the scholarship program.</li>
                             <li> Engaging learners in a peer learning group so as to provide guidance on their learning path to become Cloud Engineers. </li> 
                             <li> Hosting and anchoring virtual training sessions for learners to aid in their learning process</li>
