task: worked on the view and download RESUME

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             <li><a href="#education">Education</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
-        <a target="_blank" href="https://docs.google.com/document/d/1DVnmw0NpZLQSpLbkDlZPkigg5ZpNH3ZLgBdIMWcKRrk/edit?usp=sharing" class="top-btn">Download Resume</a> <!--Inserted link to my resume(Google Docs site)-->
+        <a target="_blank" href="https://docs.google.com/document/d/1DVnmw0NpZLQSpLbkDlZPkigg5ZpNH3ZLgBdIMWcKRrk/edit?usp=sharing" class="top-btn">View Resume</a> <!--Inserted link to my resume(Google Docs site)-->
+        <button  id="top-btn">Download Resume</a> <!--Script to download Resume-->
     </header>
 
     <!-- Home -->
@@ -36,18 +37,18 @@
             <h3>Hello, I'm</h3>
             <h1>Tomiwa Adedokun</h1>
             <h5>A Software Engineer <span>From Lagos, Nigeria</span></h5>
-            <p>I'm a developer with skills in general software development, cloud operations <br> and also very passionate about the tech community.</p>
+            <p>I'm an engineer with skills that spans across Software development, Cloud engineering, Site Reliability Engineering, DevOps, <br> and also very passionate about the tech community.</p>
             <div class="social">
                 <a target="_blank" href="https://www.linkedin.com/in/tomiwa-adedokun-excellence/"><i class='bx bxl-linkedin'></i></a> <!--Linkedin Profile-->
                 <a target="_blank" href="https://github.com/Extomvi"><i class='bx bxl-github' ></i></a>         <!--GitHub Profile-->
                 <a target="_blank" href="https://stackoverflow.com/users/11926517/tomiwa"><i class='bx bxl-stack-overflow' ></i></a>    <!--Stackoverflow Profile-->
                 <a target="_blank" href="mailto:exceltadedokun@gmail.com"><i class='bx bxs-envelope' ></i></a>                          <!--Email address-->
             </div>
-            <a href="#" class="btn">About Me</a>
+            <a href="#about" class="btn">About Me</a>
         </div>
 
         <div class="home-img">
-            <img src="img/main.png">
+            <img src="img/mains.png">
         </div>
 
     </section>
@@ -62,8 +63,8 @@
         <div class="about-text">
             <h3>I'm a Software Engineer</h3>
             <h2>I can build software systems</h2>
-            <p>Backend experience in various Software architectures, Cloud and DevOps engineer with an additional skillset in Machine learning and Artificial intelligence.</p>
-            <a href="#" class="btn">Hire Me</a>
+            <p>Backend experience in various Software architectures, Cloud, Site Reliability and DevOps engineer with an additional skillset in Machine learning and Artificial intelligence.</p>
+            <a href="mailto:exceltadedokun@gmail.com" class="btn">Hire Me</a>
         </div>
     </section>
 
@@ -76,6 +77,127 @@
 		</div>
         <div class="timeline" id="experience-timeline">
 
+            <div class="item">
+                <!--Renmoney-->
+                <div class="workplace">
+                    <h3 class="place">
+                        <i class='bx bx-link-alt'></i>
+                        <a target="_blank" href="https://renmoney.com">
+                            <u>Renmoney</u>
+                            <small>Site Reliability Engineer</small>
+                        </a>
+                    </h3>
+
+                    <div class="location">
+                        <i class='bx bx-location-plus'></i>
+                        Lagos, Nigeria
+                    </div>
+                </div>
+
+                <div class="job-meta">
+
+                    <div class="title">Site Reliability Engineer</div>
+                    <div class="time">April. 2023 - Present</div>
+                </div>
+
+                <div class="job-desc">
+                    <ul>
+                        <p>
+                            <b>Technologies:</b>
+                            <br>
+                            AWS · Kubernetes · Docker · Fargate · ECS · Ansible · Jenkins · ELK · Datadog · Grafana · Prometheus · Python · Java · Bash
+                        </p>
+                        <p>
+                            <b>Responsibilities:</b>
+                            <br>
+                        </p>
+                        <li>
+                            ● Deploy and manage applications on AWS services such as ECS, EC2 and AWS Fargate while maintaining an application availability of 99.99%.
+                        </li>
+                        <br>
+                        <li>
+                            ● Collaborate with a team of engineers to maintain site infrastructure with the application of tools such as Datadog, ELK, Prometheus and Grafana for monitoring, observability, logging and alerts for servers and services to ensure system availability and reliability.
+                        </li>
+                        <br>
+                        <li>
+                            ● Performe documentation of technical processes within the engineering team.                       
+                        </li>
+                        <br>
+                        <li>
+                            ● Contribute to the development and implementation of disaster recovery plans, resulting in seamless business continuity during maintenance or unexpected outages by ensuring systems are utilizing cloud best practices..                       
+                        </li>
+                        <p></p>
+
+                    </ul>
+                </div>
+            </div>
+            <!--//Renmoney-->
+            <!--Microsoft-->
+            <div class="item">
+                <!--Microsoft-->
+                <div class="workplace">
+                    <h3 class="place">
+                        <i class='bx bx-link-alt'></i>
+                        <a target="_blank" href="https://www.microsoft.com/en-us/about/company">
+                            <u>Microsoft</u>
+                            <small>Support Engineer</small>
+                        </a>
+                    </h3>
+
+                    <div class="location">
+                        <i class='bx bx-location-plus'></i>
+                        Lagos, Nigeria
+                    </div>
+                </div>
+
+                <div class="job-meta">
+
+                    <div class="title">Delivery Partner Engineer</div>
+                    <div class="time">April. 2022 - May. 2023</div>
+                </div>
+
+                <div class="job-desc">
+                    <ul>
+                        <p>
+                            <b>Technologies:</b>
+                            <br>
+                            Azure · Azure DevOps · Azure Kubernetes Service (AKS) · Azure Resource Manager · Azure Kusto · Web Applications · Azure API Management · Azure Functions · Azure Virtual Machines · Azure Logic Apps
+                        </p>
+                        <p>
+                            <b>Responsibilities:</b>
+                            <br>
+                        </p>
+                        <li>
+                            ● Delivery partner and support engineer for the Microsoft Azure App Service team with specialty in troubleshooting, configuration and performance issues for Azure App Services (Web apps).
+                        </li>
+                        <br>
+                        <li>
+                            ● Provided support for App Service Environments (ASE), App Service on Linux,  Azure Container Apps,  Web App for Containers and others.
+                        </li>
+                        <br>
+                        <li>
+                            ● Performed documentation of technical processes.                       
+                        </li>
+                        <br>
+                        <li>
+                            ● Conducted technical trainings for new engineers within the team.                        
+                        </li>
+                        <br>
+                        <li>
+                            ● Troubleshoot and resolve customer issues with the aid of troubleshooting tools thereby effectively reducing wait time and getting a resolution with an average of 98% customer satisfaction rating while maintaining a 5.0/5.0 KPI score.                       
+                        </li>
+                        <br>
+                        <li>
+                            ● App service performance and configuration with reference to:
+                            <p>Web Apps · Mobile Apps · Function Apps · Logic Apps · Web App for Containers · Web App on Linux · API Apps · App Service Domain · App Service Certificates · Static Web Apps · Start-Stop VMs                        
+                        </li>
+                        <p></p>
+
+                    </ul>
+                </div>
+            </div>
+            <!--//Microsoft-->
+            <!--Tek Experts-->
             <div class="item">
                 <!--Tek Experts-->
                 <div class="workplace">
@@ -96,7 +218,7 @@
                 <div class="job-meta">
 
                     <div class="title">Cloud Support Engineer</div>
-                    <div class="time">April. 2022 - Present</div>
+                    <div class="time">April. 2022 - April. 2023</div>
                 </div>
 
                 <div class="job-desc">
@@ -104,22 +226,18 @@
                         <p>
                             <b>Technologies:</b>
                             <br>
-                            Azure · Azure DevOps · Azure Kubernetes Service (AKS) · Azure Resource Manager · Azure Kusto · Web Applications · Azure API Management · Azure Functions · Azure Virtual Machines · Azure Logic Apps
+                            Azure · App Service
                         </p>
                         <p>
                             <b>Responsibilities:</b>
                             <br>
                         </p>
                         <li>
-                            ● Troubleshooting web apps using troubleshooting tools 
+                            ● Deployed cloud applications through the application of the efficient cloud tools with an application availability of 99.99% by utilizing Azure DevOps tools.
                         </li>
                         <br>
                         <li>
-                            ● Microsoft Azure cloud support for App Services and its operations which includes but not limited to Web apps and Azure Functions.
-                        </li>
-                        <br>
-                        <li>
-                            ● Microsoft Azure cloud support for App Services performance & configuration which includes Web apps, Azure Functions and others
+                            ● Performed technical Azure cloud support for App Services performance & configuration which includes Web apps, Azure Functions and others which accounts to 50% app issues.
                         </li>
                         <br>
                         <li>
@@ -127,7 +245,7 @@
                         </li>
                         <br>
                         <li>
-                            ● Ensuring effective communication which brings about great customer satisfaction and getting a resolution with an average of 98% customer satisfaction rating.                        
+                            ● Troubleshoot and resolve customer issues with the aid of troubleshooting tools thereby effectively reducing wait time and getting a resolution with an average of 98% customer satisfaction rating while maintaining a 5.0/5.0 KPI score.                       
                         </li>
                         <br>
                         <li>
