task: fixed the skills button action in navigation bar

--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
 
     </section>
 
-    <section id="skills-section" class="skills-section selection text-center">
+    <section id="skills" class="skills-section selection text-center">
 
         <h2 class="section-title">Professional Skills</h2>
         <div class="top-skills">
@@ -617,7 +617,7 @@
                             </div>
                         </div>
                         <h4 class="skill-name">Python</h4>
-                        <div class="level">4 years</div>
+                        <div class="level">5 years</div>
                         <div class="desc"> </div>
                     </div>
 
@@ -669,7 +669,7 @@
                             </div>
                         </div>
                         <h4 class="skill-name">AWS</h4>
-                        <div class="level">Cloud Practioner, 1 year</div>
+                        <div class="level">Cloud Practioner, 2 years</div>
                         <div class="desc"> </div>
                     </div>
                 </div>
@@ -678,15 +678,17 @@
         </div>
 
         <div class="other-skills">
-            <h3 class="subtitle">DevOps</h3>
+            <h3 class="subtitle">Site Reliability Engineering & DevOps</h3>
             <div class="misc-skills">
                 <span class="skill-tag">Kubernetes</span>
                 <span class="skill-tag">Docker</span>
                 <span class="skill-tag">Azure DevOps</span>
                 <span class="skill-tag">AWS</span>
-                <span class="skill-tag">Schema Registry</span>
+                <span class="skill-tag">Elasticsearch</span>
+                <span class="skill-tag">Grafana</span>
+                <span class="skill-tag">Datadog</span>
             </div>
-            <!-- DevOps Skillset -->
+            <!-- SRE & DevOps Skillset -->
             <br>
             <h3 class="subtitle">Backend</h3>
             <div class="misc-skills">
