--- a/index.html
+++ b/index.html
@@ -787,6 +787,7 @@
 				<form>
 					<input type="email" name="email" placeholder="Enter Your email" required aria-invalid="true" aria-required="true" id="mce-email">
 					<input type="submit" name="submit" value="Submit">
+                    <button type="submit">Send Email</button>
 				</form>
 			</div>
 		</div>
