task: updated Portfolio for deployment

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		<div class="heading">
 			<h3>Portfolio</h3>
 			<h2>My Experience</h2>
-			<p>Most common methods for software engineering best practices <br> that aligns with AGILE software and DevOps practices</p>
+			<p>Most common methods for software engineering best practices <br> that aligns with AGILE software, Site Reliability Engineering and DevOps practices</p>
 		</div>
         <div class="timeline" id="experience-timeline">
 
@@ -716,11 +716,9 @@
                     <div class="sub-title">University of Lagos, Nigeria</div>
                     <div class="time">2015 - 2020</div>
                     <div class="desc">
-                        Major in Computer Engineering with a minor in Electrical and Electronics Engineering.
-                        <br>
-                        Member of the Andela Learning Community, Data Science Nigeria, Microsoft Tech Community(MSPs) & Google Developers Group(GDG).
-                        <br>
-                        Other experiences in school includes extracurricular activities such as Sports(Tennis), programming experiences, bootcamps and volunteering.
+                        <li>● Major in Computer Engineering with a minor in Electrical and Electronics Engineering.</li>
+                        <li>● Member of the Andela Learning Community, Data Science Nigeria, Microsoft Tech Community(MSPs) & Google Developers Group(GDG).</li>
+                        <li>● Other experiences in school includes extracurricular activities such as Sports(Tennis), programming experiences, bootcamps and volunteering.</li>
                     </div>
                 </div>
             </div>
@@ -735,39 +733,53 @@
                     <br>
                     <!--  -->
                     <div class="desc">
-                        <b>Google Africa Developers Scholarship Mentor (Google Cloud)- Google & Andela</b>
-                        <ul>
-                            <li> Cloud engineering operations on Google Cloud Platform</li>
-                            <li> Guiding learning through the learning phases of the scholarship program.</li>
-                            <li> Engaging learners in a peer learning group so as to provide guidance on their learning path to become Cloud Engineers. </li> 
-                            <li> Hosting and anchoring virtual training sessions for learners to aid in their learning process</li>
-                        </ul>
-                        <a target="_blank" href="https://help.pluralsight.com/help/google-africa-developer-scholarship-2022"> Program info </a>
-                        <br>
-                        <b>Google IT Support Professional Certification - Google</b>
-                        <a target="_blank" href="https://www.coursera.org/account/accomplishments/verify/ZDQPH23YBW2P"> Certificate Link </a>
-                        <br>
-                        <b>Google Cloud Professional - Google</b>
-                        <a target="_blank" href="https://adscerts.com/scholar/FFBFD9FE874B30A"> Certificate Link </a>
-                        <br>
-                        <b>Microsoft Certified Azure Fundamental - Microsoft</b>
-                        <a target="_blank" href="https://www.credly.com/badges/68f4b340-bcab-4daa-afe4-0da4a11d249c"> Certificate Link </a>
-                        <br>
-                        <b>Microsoft Certified AI Fundamental - Microsoft</b>
-                        <a target="_blank" href="https://www.credly.com/badges/3f231250-1966-40a3-bfc3-adfdc4981f89/public_url"> Certificate Link </a>
-                        <br>
-                        <b>AWS Cloud Practitioner - AWS</b>
+                        <b>● AWS Cloud Practitioner - AWS</b>
                         <a target="_blank" href="https://www.credly.com/badges/19da78a4-4d2f-46d3-a08a-b8c1ee0fc8dd/public_url"> Certificate Link </a>
                         <br>
-                        <b>Build4SDG - Facebook | Andela</b>
+                        <b>● Build4SDG - Facebook | Andela</b>
                         <a target="_blank" href="https://drive.google.com/file/d/1qmuhEYLeRPkCV3-P1wD_ztPC163ov74v/view"> Certificate Link </a>
                         <br>
-                        <b>Edge AI for IoT Developers Nanodegree - Intel | Udacity</b>
+                        <b>● Edge AI for IoT Developers Nanodegree - Intel | Udacity</b>
                         <a target="_blank" href="https://graduation.udacity.com/confirm/PWMKHMYP"> Certificate Link </a>
+                        <br>
+                        <b>● Google Cloud Professional - Google</b>
+                        <a target="_blank" href="https://adscerts.com/scholar/FFBFD9FE874B30A"> Certificate Link </a>
+                        <br>
+                        <b>● Microsoft Certified Azure Fundamental - Microsoft</b>
+                        <a target="_blank" href="https://www.credly.com/badges/68f4b340-bcab-4daa-afe4-0da4a11d249c"> Certificate Link </a>
+                        <br>
+                        <b>● Microsoft Certified AI Fundamental - Microsoft</b>
+                        <a target="_blank" href="https://www.credly.com/badges/3f231250-1966-40a3-bfc3-adfdc4981f89/public_url"> Certificate Link </a>
+                        <br>
+                        <b>● Google IT Support Professional Certification - Google</b>
+                        <a target="_blank" href="https://www.coursera.org/account/accomplishments/verify/ZDQPH23YBW2P"> Certificate Link </a>
+                        <br>
                     </div>
                 </div>
             </div>
             <!-- //Item -->
+            <div class="item col-12 col-md-6">
+                <div class="item-inner">
+                    <div class="title">Community Engagement</div>
+                    <br>
+                    <div class="desc">
+                        <b>Google Africa Developers Scholarship Mentor (Google Cloud)- Google & Andela</b>
+                        <a target="_blank" href="https://help.pluralsight.com/help/google-africa-developer-scholarship-2022"> Program info </a>
+                        <ul>
+                            <li> ● Cloud engineering operations on Google Cloud Platform.</li>
+                            <li> ● Guiding learning through the learning phases of the scholarship program.</li>
+                            <li> ● Engaging learners in a peer learning group so as to provide guidance on their learning path to become Cloud Engineers.</li> 
+                            <li> ● Hosting and anchoring virtual training sessions for learners to aid in their learning process.</li>
+                        </ul>
+                        <br>
+                        <b>Google Developers Group - Google Cloud Tech Facilitator/Mentor</b>
+                        <a target="_blank" href="https://adscerts.com/scholar/FFBFD9FE874B30A"> Certificate </a>
+                        <ul>
+                            <li> ● Facilitating the community members on the use/application of Google Cloud on projects and even machine learning and AI.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
 
         </div>
 
@@ -787,7 +799,6 @@
 				<form>
 					<input type="email" name="email" placeholder="Enter Your email" required aria-invalid="true" aria-required="true" id="mce-email">
 					<input type="submit" name="submit" value="Submit">
-                    <button type="submit">Send Email</button>
 				</form>
 			</div>
 		</div>
